# PocketOptionAPI

./: client_test.py  conda_build_config.yml  environment.yml  meta.yaml  pyproject.toml  setup.py  test.py
conda-recipe/: meta.yaml
pocketoptionapi/: __init__.py  api.py  stable_api.py
pocketoptionapi/ws/: client.py
tests/: test.py
